# hungry_runner

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  flake.nix
src/: cli.rs  lib.rs  main.rs
