[package]
name = "hungry_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
console = "0.15.8"
indicatif = { version = "0.17.8", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.10.0"
